add_executable(
    sphereTest
    ${PROJECT_SOURCE_DIR}/examples/sphereTest.cpp
)

add_executable(
    ackleyTest
    ${PROJECT_SOURCE_DIR}/examples/ackleyTest.cpp
)

add_executable(
    griewankTest
    ${PROJECT_SOURCE_DIR}/examples/griewankTest.cpp
)

add_executable(
    rastriginTest
    ${PROJECT_SOURCE_DIR}/examples/rastriginTest.cpp
)

add_executable(
    rosenbrokTest
    ${PROJECT_SOURCE_DIR}/examples/rosenbrokTest.cpp
)